# fastsolt-api

./: .gitignore  README.md  pyproject.toml  requirement.txt  startup.py
deploy/: __init__.py  config.py
deploy/app/: __init__.py  exception.py  middleware.py  tip.py
deploy/curd/: __init__.py  database.py  xtb_sysuser.py  xtb_user.py
deploy/delib/: __init__.py  dingtalk_lib.py  excel_lib.py  file_lib.py  http_lib.py  image_lib.py  qywx_lib.py  redis_lib.py  store_lib.py
deploy/schema/: __init__.py  _base.py  _dao_base_model.py  _po_base_model.py
deploy/schema/dao/: __init__.py  common_field.py  sysuser.py  xtb_sysuser.py  xtb_user.py
deploy/schema/dto/: __init__.py  xtb_sysuser.py  xtb_user.py
deploy/schema/po/: __init__.py  access.py  base.py  depend.py  menu.py  response.py  x.py  xtb_user.py
deploy/service/: __init__.py  api.py  upload.py  xtb_sysuser.py  xtb_user.py
deploy/utils/: __init__.py  base_class.py  command.py  converter.py  decorator.py  depend.py  enum.py  enumeration.py  exception.py  logger.py  printer.py  status.py  status_value.py  token.py  utils.py
deploy/view/: __init__.py  access.py  annotated.py  api.py  base.py  depend.py  error.py  method.py  response.py  root.py  upload.py  xtb_sysuser.py  xtb_user.py
etc/: dev.toml  prod.toml  supervisor_fastslot_api.conf
